✨ Refinamento completo do site Las Lobas para apresentação
🎨 Melhorias visuais e de usabilidade:
- Espaçamentos otimizados em todas as seções
- Tipografia refinada com fonte Alegreya para parágrafos
- Títulos unificados com Classy Voguish
- Header fixo com logo primário
- Footer simplificado e limpo

📱 Otimizações mobile completas:
- Breakpoints em 900px, 768px, 600px e 480px
- Menu mobile melhorado com melhor padding e navegação
- Hero section responsiva com tipografia balanceada
- Cards e elementos com espaçamento apropriado
- CTAs otimizados para cada tamanho de tela

🖼️ Integração completa de imagens:
- 7 logos primários
- 7 logos secundários
- 7 símbolos
- 5 wallpapers de fundo
- Todos os elementos decorativos implementados

🔍 SEO e acessibilidade:
- Meta tags completas em todas as páginas
- Open Graph tags para redes sociais
- Descriptions e keywords otimizadas
- Estrutura semântica HTML5
- Alt texts em todas as imagens

📄 Páginas finalizadas:
- index.html: Página principal do grupo Las Lobas
- workshop.html: Workshops e vivências
- contato.html: Formulário e informações de contato
- README.md: Documentação completa do projeto

✅ Pronto para apresentação à cliente

--- a/contato.html
+++ b/contato.html
@@ -3,28 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Entre em contato com Mara Guimarães para mais informações sobre o grupo terapêutico Las Lobas e workshops de reconexão feminina.">
+  <meta name="keywords" content="contato, agendamento, terapia feminina, consulta psicológica, workshop feminino">
+  <meta name="author" content="SOULLOBA - Mara Guimarães">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Contato | SOULLOBA - Las Lobas">
+  <meta property="og:description" content="Tire suas dúvidas e agende sua participação no grupo terapêutico Las Lobas.">
+  
   <title>Contato - Las Lobas | SOULLOBA</title>
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="icon" type="image/png" href="images/new/SOULLOBA-SÍMBOLO (1).png">
+  <link rel="icon" type="image/png" href="images/SOULLOBA-LOGO_SECUNDARIO (1).png">
 </head>
 <body>
-  <header class="hero">
-    <img src="images/new/SOULLOBA-LOGOTIPO (1).png" alt="SOULLOBA Logo" class="logo">
-    <button class="mobile-menu-toggle" aria-label="Menu">
-      <i class="fas fa-bars"></i>
-    </button>
-    <nav>
-      <ul>
-        <li><a href="index.html">Las Lobas</a></li>
-        <li><a href="workshop.html">Workshop</a></li>
-        <li><a href="contato.html" class="active">Contato</a></li>
-      </ul>
-    </nav>
+  <header class="main-header">
+    <div class="header-container">
+      <div class="header-logo">
+        <img src="images/SOULLOBA-lOGO_PRIMARIO (1).png" alt="SOULLOBA Logo" class="logo">
+        <span class="header-subtitle">Reconexão com o Feminino</span>
+      </div>
+      <button class="mobile-menu-toggle" aria-label="Menu">
+        <i class="fas fa-bars"></i>
+      </button>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="index.html"><i class="fas fa-moon"></i> Las Lobas</a></li>
+          <li><a href="workshop.html"><i class="fas fa-star"></i> Workshop</a></li>
+          <li><a href="contato.html" class="active"><i class="fas fa-envelope"></i> Contato</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section class="content-section">
+  <section class="content-section wallpaper-1">
+    <div class="decorative-symbol symbol-5"></div>
     <div class="container">
       <h2>Entre em Contato</h2>
       <p class="intro-text">Estou aqui para acolher suas dúvidas e te ajudar a dar o próximo passo na sua jornada de reconexão com o feminino</p>
@@ -83,7 +98,8 @@
     </div>
   </section>
 
-  <section class="content-section alt-bg">
+  <section class="content-section alt-bg wallpaper-4">
+    <div class="decorative-logo logo-primario-3"></div>
     <div class="container" style="text-align: center;">
       <h2>Pronta para despertar a Loba que existe em você?</h2>
       <p style="font-size: 1.2rem; margin: 2rem 0;">Entre em contato agora e saiba mais sobre o Grupo Terapêutico Las Lobas</p>
@@ -92,7 +108,10 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 SOULLOBA - Mara Guimarães. Todos os direitos reservados.</p>
+    <div class="footer-content">
+      <img src="images/SOULLOBA-LOGO_SECUNDARIO (3).png" alt="SOULLOBA" class="footer-logo">
+      <p>&copy; 2025 SOULLOBA - Mara Guimarães. Todos os direitos reservados.</p>
+    </div>
   </footer>
   
   <script src="script.js"></script>
