--- a/index.html
+++ b/index.html
@@ -3,25 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Las Lobas - Grupo terapêutico de 3 meses para mulheres que desejam reconexão com o feminino, autoconhecimento e transformação pessoal. Facilitado por Mara Guimarães.">
+  <meta name="keywords" content="terapia feminina, grupo terapêutico, reconexão feminina, autoconhecimento, psicologia junguiana, desenvolvimento pessoal">
+  <meta name="author" content="SOULLOBA - Mara Guimarães">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Las Lobas - Grupo Terapêutico | SOULLOBA">
+  <meta property="og:description" content="Reconecte-se com seu feminino em um espaço seguro e transformador. Grupo terapêutico de 3 meses para mulheres.">
+  <meta property="og:image" content="images/grupoterapeutico.jpg">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Las Lobas - Grupo Terapêutico">
+  <meta name="twitter:description" content="Reconecte-se com seu feminino em um espaço seguro e transformador.">
+  
   <title>Las Lobas - Grupo Terapêutico | SOULLOBA</title>
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="icon" type="image/png" href="images/new/SOULLOBA-SÍMBOLO (1).png">
+  <link rel="icon" type="image/png" href="images/SOULLOBA-LOGO_SECUNDARIO (1).png">
 </head>
 <body>
-  <header class="hero">
-    <img src="images/new/SOULLOBA-LOGOTIPO (1).png" alt="SOULLOBA Logo" class="logo">
-    <button class="mobile-menu-toggle" aria-label="Menu">
-      <i class="fas fa-bars"></i>
-    </button>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Las Lobas</a></li>
-        <li><a href="workshop.html">Workshop</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
+  <header class="main-header">
+    <div class="header-container">
+      <div class="header-logo">
+        <img src="images/SOULLOBA-lOGO_PRIMARIO (1).png" alt="SOULLOBA Logo" class="logo">
+        <span class="header-subtitle">Reconexão com o Feminino</span>
+      </div>
+      <button class="mobile-menu-toggle" aria-label="Menu">
+        <i class="fas fa-bars"></i>
+      </button>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="index.html" class="active"><i class="fas fa-moon"></i> Las Lobas</a></li>
+          <li><a href="workshop.html"><i class="fas fa-star"></i> Workshop</a></li>
+          <li><a href="contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <!-- Hero Section -->
@@ -37,6 +57,7 @@
 
   <!-- O Que é Las Lobas -->
   <section class="content-section">
+    <div class="decorative-symbol symbol-6"></div>
     <div class="container">
       <h2>O Grupo Terapêutico Las Lobas</h2>
       <p class="intro-text">É um espaço para mulheres que desejam se reconectar com sua essência feminina recuperando a sensibilidade, a presença, a leveza, o prazer de existir e o contato com o que é mais verdadeiro e genuíno em si.</p>
@@ -57,7 +78,8 @@
   </section>
 
   <!-- Os Contos Curam -->
-  <section class="content-section alt-bg">
+  <section class="content-section alt-bg wallpaper-1">
+    <div class="decorative-symbol symbol-1"></div>
     <div class="container">
       <h2>Os Contos Curam</h2>
       <p>Os contos de fadas do livro <em>Mulheres que Correm com os Lobos</em> são mapas simbólicos da psique feminina. Neles estão guardadas verdades universais sobre os ciclos da vida, os desafios da alma e os caminhos de transformação que toda mulher deve percorrer para ser psíquica e emocionalmente saudável.</p>
@@ -71,7 +93,8 @@
   </section>
 
   <!-- Porque é Transformador -->
-  <section class="content-section">
+  <section class="content-section wallpaper-2">
+    <div class="decorative-symbol symbol-2"></div>
     <div class="container">
       <h2>O Grupo Terapêutico Las Lobas é transformador na vida de uma mulher porque…</h2>
       
@@ -110,7 +133,8 @@
   </section>
 
   <!-- Para Quem NÃO é -->
-  <section class="content-section alt-bg">
+  <section class="content-section alt-bg wallpaper-3">
+    <div class="decorative-logo logo-secundario-1"></div>
     <div class="container">
       <h2>Esse trabalho não é para você que:</h2>
       <ul class="checklist negative">
@@ -126,6 +150,7 @@
 
   <!-- Para Quem É -->
   <section class="content-section">
+    <div class="decorative-symbol symbol-7"></div>
     <div class="container">
       <h2>Esse trabalho é para você que:</h2>
       <ul class="checklist positive">
@@ -140,7 +165,8 @@
   </section>
 
   <!-- O Que Você Vai Aprender -->
-  <section class="content-section alt-bg">
+  <section class="content-section alt-bg wallpaper-4">
+    <div class="decorative-symbol symbol-3"></div>
     <div class="container">
       <h2>No G.T. Las Lobas você vai aprender:</h2>
       <ul class="learning-list">
@@ -158,6 +184,7 @@
 
   <!-- Sobre Mara -->
   <section class="content-section about-mara">
+    <div class="decorative-logo logo-primario-1"></div>
     <div class="container">
       <div class="about-content">
         <img src="images/mara-guimaraes.jpeg" alt="Mara Guimarães" class="mara-photo">
@@ -174,7 +201,8 @@
   </section>
 
   <!-- Informações Práticas e CTA -->
-  <section class="content-section cta-section" id="inscricao">
+  <section class="content-section cta-section wallpaper-5" id="inscricao">
+    <div class="decorative-logo logo-primario-1"></div>
     <div class="container">
       <h2>Informações Práticas</h2>
       <div class="info-grid">
@@ -205,7 +233,10 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 SOULLOBA - Mara Guimarães. Todos os direitos reservados.</p>
+    <div class="footer-content">
+      <img src="images/SOULLOBA-LOGO_SECUNDARIO (1).png" alt="SOULLOBA" class="footer-logo">
+      <p>&copy; 2025 SOULLOBA - Mara Guimarães. Todos os direitos reservados.</p>
+    </div>
   </footer>
   
   <script src="script.js"></script>
