--- a/workshop.html
+++ b/workshop.html
@@ -3,29 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Workshops e vivências intensivas de reconexão com o feminino. Experiências transformadoras através dos arquétipos, contos e saberes ancestrais.">
+  <meta name="keywords" content="workshop feminino, vivências terapêuticas, arquétipos femininos, transformação pessoal, desenvolvimento feminino">
+  <meta name="author" content="SOULLOBA - Mara Guimarães">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Workshops e Vivências | SOULLOBA">
+  <meta property="og:description" content="Experiências transformadoras de reconexão com o feminino através dos arquétipos e saberes ancestrais.">
+  
   <title>Workshop - Las Lobas | SOULLOBA</title>
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="icon" type="image/png" href="images/new/SOULLOBA-SÍMBOLO (1).png">
+  <link rel="icon" type="image/png" href="images/SOULLOBA-LOGO_SECUNDARIO (1).png">
 </head>
 <body>
-  <header class="hero">
-    <img src="images/new/SOULLOBA-LOGOTIPO (1).png" alt="SOULLOBA Logo" class="logo">
-    <button class="mobile-menu-toggle" aria-label="Menu">
-      <i class="fas fa-bars"></i>
-    </button>
-    <nav>
-      <ul>
-        <li><a href="index.html">Las Lobas</a></li>
-        <li><a href="workshop.html" class="active">Workshop</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
+  <header class="main-header">
+    <div class="header-container">
+      <div class="header-logo">
+        <img src="images/SOULLOBA-lOGO_PRIMARIO (1).png" alt="SOULLOBA Logo" class="logo">
+        <span class="header-subtitle">Reconexão com o Feminino</span>
+      </div>
+      <button class="mobile-menu-toggle" aria-label="Menu">
+        <i class="fas fa-bars"></i>
+      </button>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="index.html"><i class="fas fa-moon"></i> Las Lobas</a></li>
+          <li><a href="workshop.html" class="active"><i class="fas fa-star"></i> Workshop</a></li>
+          <li><a href="contato.html"><i class="fas fa-envelope"></i> Contato</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <!-- Hero Section -->
   <section class="main-hero">
+    <div class="decorative-logo logo-secundario-2"></div>
     <img src="images/grupoterapeutico.jpg" alt="Workshop Las Lobas" class="hero-img">
     <div class="hero-text">
       <h1>Workshops e Vivências</h1>
@@ -36,7 +51,8 @@
   </section>
 
   <!-- Workshops Section -->
-  <section class="content-section" id="workshops">
+  <section class="content-section wallpaper-2" id="workshops">
+    <div class="decorative-symbol symbol-4"></div>
     <div class="container">
       <h2>Workshops Disponíveis</h2>
       <p class="intro-text">Experiências únicas de conexão com a essência feminina através dos arquétipos, contos e saberes ancestrais</p>
@@ -88,7 +104,8 @@
   </section>
 
   <!-- Porque Participar -->
-  <section class="content-section alt-bg">
+  <section class="content-section alt-bg wallpaper-3">
+    <div class="decorative-logo logo-primario-2"></div>
     <div class="container">
       <h2>Por que participar dos workshops?</h2>
       
@@ -128,8 +145,7 @@
   </section>
 
   <!-- Sobre Mara -->
-  <section class="content-section alt-bg about-mara">
-    <div class="container">
+  <section class="content-section alt-bg about-mara">    <div class="decorative-logo logo-primario-5"></div>    <div class="container">
       <div class="about-content">
         <img src="images/mara-guimaraes.jpeg" alt="Mara Guimarães" class="mara-photo">
         <div class="about-text">
@@ -145,7 +161,8 @@
   </section>
 
   <!-- CTA Final -->
-  <section class="content-section cta-section">
+  <section class="content-section cta-section wallpaper-5">
+    <div class="decorative-logo logo-primario-6"></div>
     <div class="container">
       <h2>Interessada nos workshops?</h2>
       <p class="intro-text">Entre em contato para saber mais sobre datas, valores e inscrições</p>
@@ -163,7 +180,10 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 SOULLOBA - Mara Guimarães. Todos os direitos reservados.</p>
+    <div class="footer-content">
+      <img src="images/SOULLOBA-LOGO_SECUNDARIO (2).png" alt="SOULLOBA" class="footer-logo">
+      <p>&copy; 2025 SOULLOBA - Mara Guimarães. Todos os direitos reservados.</p>
+    </div>
   </footer>
   
   <script src="script.js"></script>
