⚡ Otimizações de Performance implementadas conforme relatório Manus AI
🚀 Melhorias Core Web Vitals:
- font-display: swap adicionado em todas as 3 fontes customizadas
- Redução de 580ms no bloqueio de renderização de fontes
- Atributos width e height em todas as tags <img>
- Prevenção de Cumulative Layout Shift (CLS)

📐 Dimensões explícitas adicionadas:
- Logo header: 180x55px
- Hero images: 450x600px
- Foto Mara: 300x400px
- Footer logos: 140x70px

🗜️ Otimizações de cache e compressão:
- Arquivo .htaccess criado com compressão GZIP
- Cache de recursos estáticos (1 ano para imagens/fontes)
- Cache de 1 mês para CSS/JS
- Headers otimizados para performance

🎯 Impacto esperado:
- Redução do tempo de bloqueio de renderização (3.740ms → ~1.580ms)
- Melhoria no LCP (Largest Contentful Paint)
- CLS = 0 mantido com dimensões explícitas
- Texto visível imediatamente com font-display: swap

Atende todas as recomendações do relatório PageSpeed Insights

--- a/workshop.html
+++ b/workshop.html
@@ -22,7 +22,7 @@
   <header class="main-header">
     <div class="header-container">
       <div class="header-logo">
-        <img src="images/SOULLOBA-lOGO_PRIMARIO (1).png" alt="SOULLOBA Logo" class="logo">
+        <img src="images/SOULLOBA-lOGO_PRIMARIO (1).png" alt="SOULLOBA Logo" class="logo" width="180" height="55">
         <span class="header-subtitle">Reconexão com o Feminino</span>
       </div>
       <button class="mobile-menu-toggle" aria-label="Menu">
@@ -41,7 +41,7 @@
   <!-- Hero Section -->
   <section class="main-hero">
     <div class="decorative-logo logo-secundario-2"></div>
-    <img src="images/grupoterapeutico.jpg" alt="Workshop Las Lobas" class="hero-img">
+    <img src="images/grupoterapeutico.jpg" alt="Workshop Las Lobas" class="hero-img" width="450" height="600">
     <div class="hero-text">
       <h1>Workshops e Vivências</h1>
       <p class="hero-subtitle">Experiências transformadoras de reconexão com o feminino</p>
@@ -181,7 +181,7 @@
 
   <footer>
     <div class="footer-content">
-      <img src="images/SOULLOBA-LOGO_SECUNDARIO (2).png" alt="SOULLOBA" class="footer-logo">
+      <img src="images/SOULLOBA-LOGO_SECUNDARIO (2).png" alt="SOULLOBA" class="footer-logo" width="140" height="70">
       <p>&copy; 2025 SOULLOBA - Mara Guimarães. Todos os direitos reservados.</p>
     </div>
   </footer>
