⚡ Otimizações Críticas PageSpeed - LCP e Render Blocking
✅ Resolvido: Renderizar solicitações de bloqueio (-1.350ms)
✅ Resolvido: Exibição de fontes (-80ms)
✅ Resolvido: Descoberta de solicitações de LCP
✅ Resolvido: Melhorar entrega de imagens (-54KB)

🎯 Otimizações implementadas:
- font-display: swap em Catalina Village e Alegreya (faltavam)
- fetchpriority="high" na imagem hero (LCP - grupoterapeutico.jpg)
- preconnect mantido para cdnjs.cloudflare.com
- Wallpaper (5) otimizado: 469KB → 415KB (-54KB, qualidade 75%)

📊 Economia total esperada: 1.430ms + 54KB
🎯 Meta: Performance Score 90+ no mobile

--- a/contato.html
+++ b/contato.html
@@ -14,10 +14,8 @@
   
   <title>Contato - Las Lobas | SOULLOBA</title>
   
-  <!-- DNS Prefetch para CDNs externos -->
+  <!-- DNS Prefetch e Preconnect para CDNs externos -->
   <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-  
-  <!-- Preconnect para CDN do Font Awesome -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
   
   <!-- CSS crítico carregado de forma síncrona -->
