--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
   
   <title>Las Lobas - Grupo Terapêutico | SOULLOBA</title>
   
-  <!-- DNS Prefetch para CDNs externos -->
+  <!-- DNS Prefetch e Preconnect para CDNs externos -->
   <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-  
-  <!-- Preconnect para CDN do Font Awesome -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
   
   <!-- CSS crítico carregado de forma síncrona -->
@@ -64,7 +62,7 @@
   <main>
   <!-- Hero Section -->
   <section class="main-hero">
-    <img src="images/grupoterapeutico.jpg" alt="Grupo Terapêutico Las Lobas" class="hero-img" width="450" height="600">
+    <img src="images/grupoterapeutico.jpg" alt="Grupo Terapêutico Las Lobas" class="hero-img" width="450" height="600" fetchpriority="high">
     <div class="hero-text">
       <h1>Existe um jeito mais leve, verdadeiro e livre de viver</h1>
       <p class="hero-subtitle">E ele começa quando você se reconecta com seu feminino</p>
